feat: change generation rule for config
